Fix horizontal scroll conatainers

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
  *= require_self
  */
 @import 'bootstrap';
+@import 'custom';
 .color-palette {
 color: #1db954;
 color: #212121	;
@@ -21,11 +22,16 @@ color: #121212	;
 color: #535353	;
 color: #b3b3b3	;
 }
-.artist-card {
-  background-color: #808080; /* Mid-gray background color */
-  border-radius: 10px; /* Rounded corners */
+.horizontal-scroll-container {
+  display: flex;
+  flex-direction: row;
+  overflow-x: auto;
+  white-space: nowrap;
 }
-
+.horizontal-scroll-item {
+  display: inline-block;
+  flex: 0 0 auto; 
+}
 .artist-card .card-title {
   text-align: right; /* Align artist name to the right */
 }
@@ -57,6 +63,18 @@ color: #b3b3b3	;
   width: 300px;
   color: #fff; /* White text */
 }
+
+.post-title {
+  color: white;
+  font-family: 'FreeSansBold', sans-serif;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  hyphens: auto;
+}
+
+
+
+
 
 
 .artist-card .card-title {
