--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -17,7 +17,20 @@ body {
   letter-spacing: -1px;
   font-weight: bold;
 }
+.post-card {
+  padding-right: 5%;
+  padding-left: 5%;
+  display: inline-block;
+  background-color: #ca2b2b;
+  vertical-align: top;
+  width: 200px;
+  min-height: 400px;
+  border-radius: 10px;
+}
 
+.horizontal-scroll-item {
+  display: inline-block;
+}
 .navbar {
   background-color: #181818 !important;
 }
@@ -40,19 +53,9 @@ body {
   color: #A7A7A7;
 }
 
-#posts.horizontal-scroll-container {
-  white-space: nowrap;
-  overflow-x: scroll;
-  overflow-y: hidden;
-  -webkit-overflow-scrolling: touch;
-  scroll-behavior: smooth;
-}
 
-.post-card {
-  display: inline-block;
-  margin-right: 8px; /* Or whatever spacing you want between cards */
-  vertical-align: top; /* To ensure cards align to the top of the container */
-}
+
+
 
 #date {
   color: red;
@@ -63,13 +66,7 @@ body {
   line-height: 1.2; /* adjust as needed */
 }
 
-.post-card {
-  display: inline-block;
 
-  vertical-align: top;
-  width: 200px;
-  min-height: 400px;
-}
 .post-large {
   display: inline-block;
   margin-right: 1rem;
